--- a/blogpost.html
+++ b/blogpost.html
@@ -6,5 +6,7 @@
     <body>
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio</p>
+		<p>Y este es el parrafo de inicio 2</p>
+		<p>Y este es el parrafo de inicio 3</p>
     </body>
 </html>
